# AI_ReNe

./: .gitignore  README.md  main.py  pyproject.toml
data/: 2025_11_13_회의록.txt  2025_11_19_멘토링.txt  2025_11_19_회의록.txt
notebooks/: project_tool_test.ipynb
src/api/: deps.py
src/api/endpoints/: meeting_tool_api.py  tool_test.py
src/api/static/: index.html
src/core/: config.py  database.py
src/prompts/: meeting_tool_prompts.py
src/services/: meeting_tool_service.py
src/utils/: google_utils.py
